Fix volume slider vertical alignment with align-self
- Change vertical-align: middle to align-self: center
- Properly centers volume slider with control buttons using flexbox
- Apply to both player and mini player volume sliders

--- a/server/static/styles.css
+++ b/server/static/styles.css
@@ -1031,6 +1031,8 @@ input[type="file"] {
   outline: none;
   -webkit-appearance: none;
   appearance: none;
+  margin: 0;
+  align-self: center;
 }
 
 #player-volume-slider::-webkit-slider-thumb {
@@ -1060,7 +1062,8 @@ input[type="file"] {
   outline: none;
   -webkit-appearance: none;
   appearance: none;
-  margin: 0 4px 0 0;
+  margin: 0;
+  align-self: center;
 }
 
 .mini-volume-slider::-webkit-slider-thumb {
